Fix table wrapping on mobile
Fixes #47

--- a/assets/less/components/table.less
+++ b/assets/less/components/table.less
@@ -14,5 +14,5 @@
 }
 
 .table td {
-    @apply .p-2 .border-t;
+    @apply .px-2 .py-3 .border-t;
 }
