--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -62,6 +62,9 @@ svg {
 
 .table-collapse { border-collapse: collapse }
 
+.overflow-x-auto { overflow-x: auto; }
+.overflow-y-hidden { overflow-y: hidden; }
+
 @import 'components/listing';
 @import 'components/post';
 @import 'components/post/about-author';
